--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
      <title>
-          Tempreature Converter
+          Temperature Converter
      </title>
 
 
@@ -24,7 +24,7 @@
 
 
           <div class="heading">
-               <h1>Tempreature Converter</h1>
+               <h1>Temperature Converter</h1>
           </div>
 
 
