--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
                                         <div class="unitbox">
                                              <div class="unitoptions">
                                                   <input type="radio" name="tempreature-unit-input" id="inputcelcius"
-                                                       class="tempradio radioinput" value="°C"> °C &nbsp;
+                                                       class="tempradio radioinput" value="°C"> Celcius &nbsp;
                                              </div>
                                              <div class="unitoptions">
                                                   <input type="radio" name="tempreature-unit-input" id="inputfarenheit"
-                                                       class="tempradio radioinput" value="°F"> °F &nbsp;
+                                                       class="tempradio radioinput" value="°F"> Farenheit &nbsp;
                                              </div>
                                              <div class="unitoptions">
                                                   <input type="radio" name="tempreature-unit-input" id="inputkelvin"
-                                                       class="tempradio radioinput" value="K"> K &nbsp;
+                                                       class="tempradio radioinput" value="K"> Kelvin &nbsp;
                                              </div>
                                         </div>
                                    </div>
@@ -75,15 +75,15 @@
                                         <div class="unitbox">
                                              <div class="unitoptions">
                                                   <input type="radio" name="tempreature-unit-output" id="outputcelcius"
-                                                       class="tempradio radiooutput" value="Celcius"> °C &nbsp;
+                                                       class="tempradio radiooutput" value="Celcius"> Celcius &nbsp;
                                              </div>
                                              <div class="unitoptions">
                                                   <input type="radio" name="tempreature-unit-output" id="outputfarenheit"
-                                                       class="tempradio radiooutput" value="Farenheit"> °F &nbsp;
+                                                       class="tempradio radiooutput" value="Farenheit"> Farenheit &nbsp;
                                              </div>
                                              <div class="unitoptions">
                                                   <input type="radio" name="tempreature-unit-output" id="outputkelvin"
-                                                       class="tempradio radiooutput" value="Kelvin"> K &nbsp;
+                                                       class="tempradio radiooutput" value="Kelvin"> Kelvin &nbsp;
                                              </div>
                                         </div>
                                    </div>
