--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
                               <div class="tempdegree">
                                    <div class="temptitle" id="toptitle">
-                                        Degrees
+                                        Temperature
                                    </div>
-                                   <input class="tempinputbox" id="tempinput" autocomplete="off" required>
+                                   <input class="tempinputbox" id="tempinput" autocomplete="off" title="Enter the Temperature without any Unit" required>
                               </div>
 
                               <div class="tempunit">
